--- a/configuration.properties
+++ b/configuration.properties
@@ -9,3 +9,7 @@ student3=student96@library
 password3=HvGl6Nsy
 librarian4=librarian16@library
 password4=8BzUhhaU
+
+library1.database.url=jdbc:mysql://52.5.130.130:3306/library1
+library1.database.username=library1_client
+library1.database.password=WVF4NdGXCKHeE6VQ
